fix new patch issues (s2r broken in css now) (#562)

--- a/content/panorama/styles/custom_game/custom_loading_screen.css
+++ b/content/panorama/styles/custom_game/custom_loading_screen.css
@@ -1,7 +1,7 @@
 .LoadingScreenRoot {
     width: 100%;
     height: 100%;
-    background-image: url("s2r://panorama/images/leaf_pages/ddb_s1_promo/bg_moon_psd.vtex");
+    background-image: url("file://panorama/images/leaf_pages/ddb_s1_promo/bg_moon_psd.png");
     background-size: 100% 100%;
 }
 
@@ -14,3 +14,4 @@
     margin-top: 20px;
     margin-left: 20px;
 }
+
