--- a/content/panorama/styles/custom_game/team_select.css
+++ b/content/panorama/styles/custom_game/team_select.css
@@ -21,17 +21,17 @@
 {
     width: 430px;
 	height: 100%;
-	flow-children: down;    
+	flow-children: down;
     padding-left: 16px;
 	padding-right: 16px;
     margin-left: 16px;
 }
-    
-#TeamsListGroup 
+
+#TeamsListGroup
 {
     width: 100%;
     vertical-align: center;
-    flow-children: down;    
+    flow-children: down;
 }
 
 #TeamListHeader
@@ -39,7 +39,7 @@
     width: 100%;
     flow-children: right;
 	color: #323232;
-//	border: 2px solid red;	
+//	border: 2px solid red;
     visibility: collapse;
 }
 
@@ -53,7 +53,7 @@
 	margin-left: 8px;
 }
 
-#TeamListLockedIcon 
+#TeamListLockedIcon
 {
     width: 16px;
     height: 16px;
@@ -63,7 +63,7 @@
     wash-color: #aa0000ee;
 }
 
-.teams_locked #TeamListLockedIcon 
+.teams_locked #TeamListLockedIcon
 {
     visibility: visible;
 }
@@ -76,7 +76,7 @@
 }
 
 #ShuffleTeamAssignmentButton
-{    
+{
     height: 32px;
     margin-top: 8px;
     margin-left: 6px;
@@ -133,13 +133,13 @@
     visibility: collapse;
 }
 
-#GameInfoPanel 
+#GameInfoPanel
 {
     margin: 16px;
     flow-children: down;
 }
 
-#GameModeNameLabel 
+#GameModeNameLabel
 {
     font-size: 32px;
 	text-transform: uppercase;
@@ -167,7 +167,7 @@
 	horizontal-align: center;
 }
 
-#StartGameCountdownTimer.countdown_inactive #TeamSelectTimer 
+#StartGameCountdownTimer.countdown_inactive #TeamSelectTimer
 {
     opacity: 0.0;
 }
@@ -188,7 +188,7 @@
     transition-duration: 0.2s;
 }
 
-#TimerLabelBox 
+#TimerLabelBox
 {
 	margin-top: 76px;
     height: 20px;
@@ -206,7 +206,7 @@
     transition-duration: 0.2s;
 }
 
-#StartGameCountdownTimer.auto_start #TimerLabelAutoStart 
+#StartGameCountdownTimer.auto_start #TimerLabelAutoStart
 {
     visibility: visible;
 }
@@ -222,7 +222,7 @@
     transition-duration: 0.2s;
 }
 
-#StartGameCountdownTimer.forced_start #TimerLabelGameStart 
+#StartGameCountdownTimer.forced_start #TimerLabelGameStart
 {
     visibility: visible;
 }
@@ -284,8 +284,8 @@
 }
 
 
-#UnassignedPlayersDivider 
-{	
+#UnassignedPlayersDivider
+{
     width: 100%;
 	height: 2px;
     margin-left: 8px;
@@ -332,8 +332,8 @@
 	color: white;
 }
 
-.unassigned_players #AutoAssignButton:active 
-{    
+.unassigned_players #AutoAssignButton:active
+{
 	sound: "ui_team_select_auto_assign";
 }
 
@@ -351,17 +351,17 @@
 }
 
 #LockAndStartButton
-{ 
+{
     horizontal-align: right;
 	background-color: gradient( linear, 0% 0%, 0% 100%, from( #2d4881cc ), to( #486ca9cc ) );
 	box-shadow: fill #486ca922 -4px -4px 8px 8px;
 	border-top: 1px solid #ffffff03;
-	border-left: 1px solid #ffffff03; 
+	border-left: 1px solid #ffffff03;
     visibility: collapse;
 }
 
 
-.unassigned_players #LockAndStartButton 
+.unassigned_players #LockAndStartButton
 {
     background-color: gradient( linear, 0% 0%, 0% 100%, from( #14161a ), to( #23262b ) );
     box-shadow: fill #00000000 0px 0px 0px 0px;
@@ -369,13 +369,13 @@
     border-left: 1px solid #ffffff03;
 }
 
-#LockAndStartButton Label 
+#LockAndStartButton Label
 {
     transition-property: opacity;
     transition-duration: 0.2s;
 }
 
-.unassigned_players #LockAndStartButton Label 
+.unassigned_players #LockAndStartButton Label
 {
     opacity: 0.1;
 }
@@ -385,8 +385,8 @@
     visibility: visible;
 }
 
-.teams_locked #LockAndStartButton 
-{    
+.teams_locked #LockAndStartButton
+{
     visibility: collapse;
 }
 
@@ -402,17 +402,17 @@
 }
 
 #CancelAndUnlockButton
-{ 
+{
     horizontal-align: right;
     //background-color: gradient( linear, 0% 0%, 0% 100%, from( #722217 ), to( #DD4A29 ) );
 	//box-shadow: fill #DD4A2922 -4px -4px 8px 8px;
 	//border-top: 1px solid #ffffff03;
-	//border-left: 1px solid #ffffff03; 
+	//border-left: 1px solid #ffffff03;
     visibility: collapse;
 
     background-color: gradient( linear, 0% 0%, 0% 100%, from( #2c1b1b ), to( #482e2f ) );
     box-shadow: fill #552e2f00 -4px -4px 8px 9px;
-	
+
 	border-top: 1px solid #3d2929;
 	border-right: 1px solid #372121;
 	border-left: 1px solid #372121;
@@ -448,7 +448,7 @@
     width: 100%;
     margin: 6px;
 	background-color: gradient( linear, 100% 0%, 100% 100%, from( #272b30 ), color-stop( 0.6, #181a1e ), to( #181a1e ) );
-    
+
     //box-shadow: fill #44444430 -5px -5px 9px 9px;
     //border-top: 1px solid #ffffff10;
 	//border-right: 1px solid #000000ff;
@@ -463,7 +463,7 @@
 }
 
 .TeamSelectTeam:hover
-{    
+{
     //background-color: #272b30dd;
 }
 
@@ -474,12 +474,12 @@
 }
 
 .teams_unlocked .TeamSelectTeam:hover #TeamBackgroundGradient
-{    
+{
     visibility: collapse;
 }
 
-#TeamBackgroundGradientHighlight 
-{   
+#TeamBackgroundGradientHighlight
+{
     width: 100%;
     height: 100%;
     visibility: collapse;
@@ -490,7 +490,7 @@
     visibility: visible;
 }
 
-#TeamGroup 
+#TeamGroup
 {
 	background-color: transparent;
     width: 100%;
@@ -510,7 +510,7 @@
 	vertical-align: top;
 	text-shadow: 2px 2px 2px black;
    	margin-left: 1px;
-    margin-top: 1px;    
+    margin-top: 1px;
 	text-transform: uppercase;
 	white-space: nowrap;
 	width: 100%;
@@ -527,7 +527,7 @@
 	vertical-align: center;
 	margin-top: 4px;
     visibility: collapse;
-	
+
 	transition-property: color;
 	transition-duration: 0.2s;
 }
@@ -552,7 +552,7 @@
     opacity: 0;
 }
 
-#TeamPlayerDivider 
+#TeamPlayerDivider
 {
 	width: 100%;
     margin: 2px;
@@ -601,8 +601,8 @@ DOTAAvatarImage
 }
 
 #PlayerIsHostPanel
-{   
-    background-image: url("s2r://panorama/images/icon_star_png.vtex");
+{
+    background-image: url("file://panorama/images/icon_star_png.png");
     background-repeat: no-repeat;
     background-size: contain;
     overflow: noclip;
@@ -630,18 +630,18 @@ DOTAAvatarImage
 	white-space: nowrap;
 }
 
-#PlayerLeaveTeamButton 
+#PlayerLeaveTeamButton
 {
 	width: 24px;
 	height: 24px;
 	wash-color: #aa0000ee;
-	
-	background-image: url("s2r://panorama/images/control_icons/x_close_png.vtex");
+
+	background-image: url("file://panorama/images/control_icons/x_close_png.png");
 	background-size: 24px 24px;
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
 	margin: 4px;
-        
+
     visibility: collapse;
 }
 
@@ -655,7 +655,7 @@ DOTAAvatarImage
     visibility: collapse;
 }
 
-.TeamSelectEmptySlot 
+.TeamSelectEmptySlot
 {
     flow-children: right;
 }
@@ -667,12 +667,12 @@ DOTAAvatarImage
 	font-size: 18px;
 }
 
-#EmptySlotIcon 
-{	
+#EmptySlotIcon
+{
     width: 32px;
 	height: 32px;
     opacity: 0.7;
-    background-image: url("s2r://panorama/images/custom_game/empty_slot_avatar_png.vtex");
+    background-image: url("file://panorama/images/custom_game/empty_slot_avatar_png.png");
     background-size: 32px 32px;
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
